[package]
name = "js_arc_tests"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = "1.12.0"
js-sys = "0.3.69"
js_arc = { version = "0.1.0", path = ".." }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
web-sys = {version="0.3.69", features=["BlobPropertyBag", "Blob", "console", "Url"]}

